--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Wonbet.vip – Crea tu usuario</title>
+  <title>GANAMOS.net – Crea tu usuario</title>
   <link rel="icon" type="image/png" sizes="32x32" href="images/logo-1.png">
 
   <!-- Google Fonts -->
@@ -48,7 +48,7 @@
 
   <!-- Meta Pixel -->
   <script>
-    const PIXEL_ID = '9256821247760891';
+    const PIXEL_ID = 'CAMBIAR';
     !function(f,b,e,v,n,t,s){
       if(f.fbq) return; n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};
