--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="screen">
     <div class="card">
       <div class="logo">
-        <img src="https://ganamos.biz/img/src/components/Logo/img/logo-net-new.png" alt="Logo de ganamos.biz/" />
+        <img src="images/logo.png" alt="Logo de ganamos.biz/" />
       </div>
       <h1 class="title">SUPER BONO DE BIENVENIDA</h1>
       <p class="subtitle">
@@ -105,7 +105,7 @@
       </div>
       <a href="#" id="ctaButton" class="btn">
         ¡CREA TU USUARIO!
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/2044px-WhatsApp.svg.png" alt="WhatsApp icon" class="icon" />
+        <img src="images/whatsapp-icon.svg" alt="WhatsApp icon" class="icon" />
       </a>
     </div>
 
@@ -115,21 +115,22 @@
       <div class="carousel">
         <ul class="carousel-track" id="track">
           <!-- slides originales -->
-          <li class="carousel-item"><img src="https://ganamos.biz/images/rubiplay/555_300x300.png" alt="Slide 1"></li>
-          <li class="carousel-item"><img src="https://ganamos.biz/images/rubiplay/558_300x300.png" alt="Slide 2"></li>
-          <li class="carousel-item"><img src="https://ganamos.biz/images/rubiplay/797_300x300.png" alt="Slide 3"></li>
-          <li class="carousel-item"><img src="https://ganamos.biz/images/rubiplay/804_300x300.png" alt="Slide 4"></li>
-          <li class="carousel-item"><img src="https://ganamos.biz/img/src/modules/SlotsRoot/providersData/Pragmatic/animatedIcons/img/gates-of-olympus.gif" alt="Slide 5"></li>
-          <li class="carousel-item"><img src="https://bsw-dk1.pragmaticplay.net/game_pic/square/200/vs20sugarrush.png" alt="Slide 6"></li>
-          <li class="carousel-item"><img src="https://bsw-dk1.pragmaticplay.net/game_pic/square/200/vs5jokerdice.png" alt="Slide 7"></li>
-          <li class="carousel-item"><img src="https://bsw-dk1.pragmaticplay.net/game_pic/square/200/vsways5lionsr.png" alt="Slide 8"></li>
-          <li class="carousel-item"><img src="https://se1.pokgaming.com/gameThumbnails/601.jpg" alt="Slide 9"></li>
-          <li class="carousel-item"><img src="https://static.gmnggate.com/thumbnails/235x235/aviatrix_ax.jpg" alt="Slide 10"></li>
-          <li class="carousel-item"><img src="https://static.gmnggate.com/thumbnails/235x235/buffalo_megaways_ps_html.jpg" alt="Slide 11"></li>
-          <li class="carousel-item"><img src="https://static.gmnggate.com/thumbnails/235x235/chickenroad_io.jpg" alt="Slide 12"></li>
-          <li class="carousel-item"><img src="https://ganamos.biz/img/src/modules/SlotsRoot/providersData/Pragmatic/animatedIcons/img/jokers-jewels.gif" alt="Slide 13"></li>
-          <li class="carousel-item"><img src="https://static.gmnggate.com/thumbnails/235x235/riseofolympus_png.jpg" alt="Slide 14"></li>
-        </ul>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide1.png" class="lazy" alt="Slide 1" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide2.png" class="lazy" alt="Slide 2" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide3.png" class="lazy" alt="Slide 3" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide4.png" class="lazy" alt="Slide 4" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide5.gif" class="lazy" alt="Slide 5" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide6.png" class="lazy" alt="Slide 6" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide7.png" class="lazy" alt="Slide 7" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide8.png" class="lazy" alt="Slide 8" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide9.jpg" class="lazy" alt="Slide 9" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide10.jpg" class="lazy" alt="Slide 10" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide11.jpg" class="lazy" alt="Slide 11" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide12.jpg" class="lazy" alt="Slide 12" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide13.gif" class="lazy" alt="Slide 13" loading="lazy" /></li>
+          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide14.jpg" class="lazy" alt="Slide 14" loading="lazy" /></li>
+
+</ul>
       </div>
       <div class="dots" id="dots"></div>
     </section>
