--- a/index.html
+++ b/index.html
@@ -113,24 +113,26 @@
     <section class="carousel-section">
       <h2>POPULARES</h2>
       <div class="carousel">
-        <ul class="carousel-track" id="track">
-          <!-- slides originales -->
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide1.png" class="lazy" alt="Slide1" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide2.png" class="lazy" alt="Slide2" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide3.png" class="lazy" alt="Slide3" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide4.png" class="lazy" alt="Slide4" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide5.gif" class="lazy" alt="Slide5" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide6.png" class="lazy" alt="Slide6" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide7.png" class="lazy" alt="Slide7" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide8.png" class="lazy" alt="Slide8" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide9.jpg" class="lazy" alt="Slide9" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide10.jpg" class="lazy" alt="Slide10" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide11.jpg" class="lazy" alt="Slide11" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide12.jpg" class="lazy" alt="Slide12" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide13.gif" class="lazy" alt="Slide13" loading="lazy" /></li>
-          <li class="carousel-item"><div class="skeleton"></div><img data-src="images/slide14.jpg" class="lazy" alt="Slide14" loading="lazy" /></li>
 
+          <!-- slides originales -->
+<ul class="carousel-track" id="track">
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide1.png"  alt="Promoción bienvenida slide 1"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide2.png"  alt="Promoción bienvenida slide 2"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide3.png"  alt="Promoción bienvenida slide 3"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide4.png"  alt="Promoción bienvenida slide 4"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide5.gif"  alt="Animación promocional slide 5"         loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide6.png"  alt="Promoción bienvenida slide 6"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide7.png"  alt="Promoción bienvenida slide 7"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide8.png"  alt="Promoción bienvenida slide 8"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide9.jpg"  alt="Promoción bienvenida slide 9"          loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide10.jpg" alt="Promoción bienvenida slide 10"         loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide11.jpg" alt="Promoción bienvenida slide 11"         loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide12.jpg" alt="Promoción bienvenida slide 12"         loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide13.gif" alt="Animación promocional slide 13"         loading="lazy" /></li>
+  <li class="carousel-item"><div class="skeleton"></div><img src="images/slide14.jpg" alt="Promoción bienvenida slide 14"         loading="lazy" /></li>
 </ul>
+
+
       </div>
       <div class="dots" id="dots"></div>
     </section>
