--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>GANAMOS.net – Crea tu usuario</title>
+  <title>Wonbet.vip – Crea tu usuario</title>
   <link rel="icon" type="image/png" sizes="32x32" href="images/logo-1.png">
 
   <!-- Google Fonts -->
@@ -48,7 +48,7 @@
 
   <!-- Meta Pixel -->
   <script>
-    const PIXEL_ID = 'CAMBIAR';
+    const PIXEL_ID = '9256821247760891';
     !function(f,b,e,v,n,t,s){
       if(f.fbq) return; n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -82,11 +82,17 @@
   <!-- Theme Toggle -->
   <button id="themeToggle" aria-label="Cambiar tema" class="theme-toggle">🌙</button>
 
+<img
+ rc="images/ArgyStudios.png"
+  id="overlayImage"
+/>
+
+
   <!-- Pantalla principal -->
   <div class="screen">
     <div class="card">
       <div class="logo">
-        <img src="images/logo.png" alt="Logo de ganamos.biz/" />
+        <img src="images/logo.png" />
       </div>
       <h1 class="title">SUPER BONO DE BIENVENIDA</h1>
       <p class="subtitle">
@@ -113,8 +119,6 @@
     <section class="carousel-section">
       <h2>POPULARES</h2>
       <div class="carousel">
-
-          <!-- slides originales -->
 <ul class="carousel-track" id="track">
   <li class="carousel-item"><div class="skeleton"></div><img src="images/slide1.png"  alt="Promoción bienvenida slide 1"          loading="lazy" /></li>
   <li class="carousel-item"><div class="skeleton"></div><img src="images/slide2.png"  alt="Promoción bienvenida slide 2"          loading="lazy" /></li>
@@ -132,7 +136,6 @@
   <li class="carousel-item"><div class="skeleton"></div><img src="images/slide14.jpg" alt="Promoción bienvenida slide 14"         loading="lazy" /></li>
 </ul>
 
-
       </div>
       <div class="dots" id="dots"></div>
     </section>
@@ -145,8 +148,12 @@
       </div>
     </section>
   </div>
+ 
 
-  <!-- Contenido fallback -->
+
+
+
+
 
   <!-- Tu lógica de cookies, CTA y preloader -->
   <script>
