--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <!-- Meta Pixel -->
   <script>
-    const PIXEL_ID = '9256821247760891';
+    const PIXEL_ID = '1435084124593498';
     !function(f,b,e,v,n,t,s){
       if(f.fbq) return; n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -203,19 +203,19 @@ window.addEventListener('load', async () => {
     {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ subdomain: 'clubm', fbc, fbp })
+      body: JSON.stringify({ subdomain: 'ganamos', fbc, fbp })
     }
   );
   if (!resp.ok) throw new Error(`LineManager error: ${resp.status}`);
   const { whatsapp_number: number, uuid } = await resp.json();
 
   // → Enviar EventPayload a tu segundo API Gateway
-  const SECONDARY_API = 'https://wa9949qkz5.execute-api.us-east-2.amazonaws.com/PROD/F1-LORE';
+  const SECONDARY_API = 'https://62vcrlryk5.execute-api.us-east-2.amazonaws.com/prod/F1-GANAMOS-NET';
   const EventPayload = {
     uuid,
     name,
     timestamp: new Date().toISOString(),
-    subdomain: 'lorewb'
+    subdomain: 'ganamos'
   };
   fetch(SECONDARY_API, {
     method: 'POST',
